feat: rm-api
