# api/file/openapi.yaml
@@ -3,8 +3,348 @@
 
 openapi: 3.0.3
 info:
-    title: ""
+    title: File API
     version: 0.0.1
-paths: {}
+paths:
+    /resource/api/file:
+        put:
+            tags:
+                - File
+            description: UpdateFile 更新文件信息
+            operationId: File_UpdateFile
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/UpdateFileRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/UpdateFileReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+        delete:
+            tags:
+                - File
+            description: DeleteFile 删除文件信息
+            operationId: File_DeleteFile
+            parameters:
+                - name: ids
+                  in: query
+                  schema:
+                    type: array
+                    items:
+                        type: integer
+                        format: uint32
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/DeleteFileReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /resource/api/file/prepare_upload:
+        post:
+            tags:
+                - File
+            description: PrepareUploadFile 预上传文件信息
+            operationId: File_PrepareUploadFile
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/PrepareUploadFileRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/PrepareUploadFileReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /resource/api/files:
+        get:
+            tags:
+                - File
+            description: ListFile 获取文件信息列表
+            operationId: File_ListFile
+            parameters:
+                - name: page
+                  in: query
+                  schema:
+                    type: integer
+                    format: uint32
+                - name: pageSize
+                  in: query
+                  schema:
+                    type: integer
+                    format: uint32
+                - name: order
+                  in: query
+                  schema:
+                    type: string
+                - name: orderBy
+                  in: query
+                  schema:
+                    type: string
+                - name: directoryId
+                  in: query
+                  schema:
+                    type: integer
+                    format: uint32
+                - name: status
+                  in: query
+                  schema:
+                    type: string
+                - name: name
+                  in: query
+                  schema:
+                    type: string
+                - name: keyList
+                  in: query
+                  schema:
+                    type: array
+                    items:
+                        type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/ListFileReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /resource/api/user/file:
+        get:
+            tags:
+                - File
+            description: GetFile 获取指定的文件信息
+            operationId: File_GetUserFile
+            parameters:
+                - name: directory
+                  in: query
+                  schema:
+                    type: string
+                - name: id
+                  in: query
+                  schema:
+                    type: integer
+                    format: uint32
+                - name: key
+                  in: query
+                  schema:
+                    type: string
+                - name: sha
+                  in: query
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/GetUserFileReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /resource/client/file/prepare_upload:
+        post:
+            tags:
+                - File
+            description: PrepareUploadFile 预上传文件信息
+            operationId: File_PrepareUploadFile
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/PrepareUploadFileRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/PrepareUploadFileReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
 components:
-    schemas: {}
+    schemas:
+        DeleteFileReply:
+            type: object
+            properties:
+                total:
+                    type: integer
+                    format: uint32
+        GetUserFileReply:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    format: uint32
+                directoryId:
+                    type: integer
+                    format: uint32
+                name:
+                    type: string
+                type:
+                    type: string
+                size:
+                    type: integer
+                    format: uint32
+                sha:
+                    type: string
+                key:
+                    type: string
+                createdAt:
+                    type: integer
+                    format: uint32
+                updatedAt:
+                    type: integer
+                    format: uint32
+        GoogleProtobufAny:
+            type: object
+            properties:
+                '@type':
+                    type: string
+                    description: The type of the serialized message.
+            additionalProperties: true
+            description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
+        ListFileReply:
+            type: object
+            properties:
+                total:
+                    type: integer
+                    format: uint32
+                list:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/ListFileReply_File'
+        ListFileReply_File:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    format: uint32
+                directoryId:
+                    type: integer
+                    format: uint32
+                name:
+                    type: string
+                type:
+                    type: string
+                size:
+                    type: integer
+                    format: uint32
+                sha:
+                    type: string
+                key:
+                    type: string
+                createdAt:
+                    type: integer
+                    format: uint32
+                updatedAt:
+                    type: integer
+                    format: uint32
+        PrepareUploadFileReply:
+            type: object
+            properties:
+                uploaded:
+                    type: boolean
+                key:
+                    type: string
+                chunkSize:
+                    type: integer
+                    format: uint32
+                chunkCount:
+                    type: integer
+                    format: uint32
+                uploadId:
+                    type: string
+                uploadChunks:
+                    type: array
+                    items:
+                        type: integer
+                        format: uint32
+                sha:
+                    type: string
+        PrepareUploadFileRequest:
+            type: object
+            properties:
+                directoryId:
+                    type: integer
+                    format: uint32
+                directoryPath:
+                    type: string
+                name:
+                    type: string
+                size:
+                    type: integer
+                    format: uint32
+                sha:
+                    type: string
+        Status:
+            type: object
+            properties:
+                code:
+                    type: integer
+                    description: The status code, which should be an enum value of [google.rpc.Code][google.rpc.Code].
+                    format: int32
+                message:
+                    type: string
+                    description: A developer-facing error message, which should be in English. Any user-facing error message should be localized and sent in the [google.rpc.Status.details][google.rpc.Status.details] field, or localized by the client.
+                details:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/GoogleProtobufAny'
+                    description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
+            description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
+        UpdateFileReply:
+            type: object
+            properties: {}
+        UpdateFileRequest:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    format: uint32
+                directoryId:
+                    type: integer
+                    format: uint32
+                name:
+                    type: string
+tags:
+    - name: File
